--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "bluebird": "^3.5.0",
     "css": "^2.2.1",
     "csv-stringify-as-promised": "^1.1.0",
     "q-io": "^1.13.4"
